[package]
name = "cargo_1"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#regex = "1.10.4"
rand = { git = "https://github.com/rust-lang-nursery/rand.git" }







