[package]
name = "actix-demo1"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres", "macros", "chrono"] }
tokio = { version = "1.38.0", features = ["full"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.203", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.22"
